删除部分无用提交信息

--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
         <module>jetty</module>
         <module>dubbo</module>
         <module>amazingt</module>
+        <module>redis-cache</module>
     </modules>
 
 
