--- a/redis-cache/.gitignore
+++ b/redis-cache/.gitignore
@@ -1,6 +1,6 @@
 HELP.md
 /target/
-
+!.mvn/wrapper/maven-wrapper.jar
 
 ### STS ###
 .apt_generated
@@ -12,7 +12,7 @@ HELP.md
 .sts4-cache
 
 ### IntelliJ IDEA ###
-/.idea
+.idea
 *.iws
 *.iml
 *.ipr
@@ -27,5 +27,3 @@ HELP.md
 
 ### VS Code ###
 .vscode/
-
-*/.mvn*
