--- a/redis-cache/pom.xml
+++ b/redis-cache/pom.xml
@@ -7,9 +7,9 @@
         <groupId>com.self.entertainment</groupId>
         <version>${j4f.version}</version>
     </parent>
-    <artifactId>jetty</artifactId>
+    <artifactId>redis-cache</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>jetty</name>
+    <name>redis-cache</name>
     <description>Demo project for Spring Boot</description>
 
     <properties>
@@ -21,28 +21,18 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-redis -->
         <dependency>
-            <groupId>commons-io</groupId>
-            <artifactId>commons-io</artifactId>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+            <version>2.1.3.RELEASE</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/org.eclipse.jetty/jetty-server -->
-<!--        <dependency>-->
-<!--            <groupId>org.eclipse.jetty</groupId>-->
-<!--            <artifactId>jetty-server</artifactId>-->
-<!--            <version>9.4.18.v20190429</version>-->
-<!--        </dependency>-->
-        <!-- https://mvnrepository.com/artifact/com.paypal.springboot/resteasy-spring-boot-starter -->
-        <!-- https://mvnrepository.com/artifact/org.eclipse.jetty/jetty-server -->
-
 
 
     </dependencies>
