--- a/dubbo/dubbo-consumer/src/main/resources/application.properties
+++ b/dubbo/dubbo-consumer/src/main/resources/application.properties
@@ -3,3 +3,4 @@ dubbo.application.name=annotation-consumer
 dubbo.registry.address=zookeeper://119.3.10.221:2181
 dubbo.metadata-report.address=zookeeper://119.3.10.221:2181
 dubbo.consumer.timeout=10000
+server.port=8093
