--- a/redis-cache/pom.xml
+++ b/redis-cache/pom.xml
@@ -35,6 +35,14 @@
         </dependency>
 
 
+
+        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-pool2 -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-pool2</artifactId>
+            <version>2.6.2</version>
+        </dependency>
+
     </dependencies>
 
     <build>
