--- a/redis-cache/src/main/resources/application.yml
+++ b/redis-cache/src/main/resources/application.yml
@@ -1,8 +1,7 @@
 spring:
   redis:
-    host: 119.3.10.221
-    port: 6739
-    password: redislearn123
+    port: 6379
+    timeout: 5000
   cache:
     redis:
       key-prefix:
