--- a/unclassified/src/main/resources/application.properties
+++ b/unclassified/src/main/resources/application.properties
@@ -16,7 +16,7 @@
 #
 ### Dubbo Registry
 #dubbo.registry.address=zookeeper://127.0.0.1:${embedded.zookeeper.port}
-#dubbo.registry.file = ${user.home}/dubbo-cache/${spring.application.name}/dubbo.cache
+#dubbo.registry.file = ${User.home}/dubbo-cache/${spring.application.name}/dubbo.cache
 #
 ### DemoService version
 #demo.service.version=1.0.0
