--- a/course/src/main/resources/application.properties
+++ b/course/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 # jdbc_config  datasource
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://10.33.29.154:5432/Test?nullCatalogMeansCurrent=true
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://119.3.10.221:3306/course?nullCatalogMeansCurrent=true
 spring.datasource.username=admin
-spring.datasource.password=Abc12345
+spring.datasource.password=Upc@CST2018
 
 # Hikari will use the above plus the following to setup connection pooling
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
@@ -10,13 +10,12 @@ spring.datasource.hikari.minimum-idle=5
 spring.datasource.hikari.maximum-pool-size=15
 spring.datasource.hikari.auto-commit=true
 spring.datasource.hikari.idle-timeout=30000
-spring.datasource.hikari.pool-name=DatebookHikariCP
+spring.datasource.hikari.pool-name=HikariCP
 spring.datasource.hikari.max-lifetime=1800000
 spring.datasource.hikari.connection-timeout=30000
-
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.jackson.serialization.indent-output=true
+
+spring.servlet.multipart.max-file-size=5MB
