--- a/web/flowerhouse/package.json
+++ b/web/flowerhouse/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
     "iview": "^3.4.2",
+    "moment": "^2.24.0",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3"
   },
