--- a/course/src/main/resources/application.properties
+++ b/course/src/main/resources/application.properties
@@ -1,21 +1,1 @@
-# jdbc_config  datasource
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://119.3.10.221:3306/course?nullCatalogMeansCurrent=true
-spring.datasource.username=admin
-spring.datasource.password=Upc@CST2018
-
-# Hikari will use the above plus the following to setup connection pooling
-spring.datasource.type=com.zaxxer.hikari.HikariDataSource
-spring.datasource.hikari.minimum-idle=5
-spring.datasource.hikari.maximum-pool-size=15
-spring.datasource.hikari.auto-commit=true
-spring.datasource.hikari.idle-timeout=30000
-spring.datasource.hikari.pool-name=HikariCP
-spring.datasource.hikari.max-lifetime=1800000
-spring.datasource.hikari.connection-timeout=30000
-
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=false
-spring.jackson.serialization.indent-output=true
-
-spring.servlet.multipart.max-file-size=5MB
+spring.profiles.active=dev
