分析failover导致jmstemplate.send()阻塞

--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
         <module>amazingt</module>
         <module>redis-cache</module>
         <module>mybatis</module>
+        <module>openfeign</module>
     </modules>
 
 
