--- a/unclassified/src/main/resources/application.properties
+++ b/unclassified/src/main/resources/application.properties
@@ -23,3 +23,7 @@
 #
 #example.service.prefix=###
 #example.service.suffix=@@@
+spring.redis.host=
+
+feign.client.default-config=
+spring.cloud.consul.discovery.acl-token=
