完成非java Restful的注册扩展

--- a/dubbo/dubbo-consumer/pom.xml
+++ b/dubbo/dubbo-consumer/pom.xml
@@ -35,13 +35,17 @@
             <artifactId>dubbo-api</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
-
-        <!-- https://mvnrepository.com/artifact/org.jboss.resteasy/resteasy-client -->
         <dependency>
-            <groupId>org.jboss.resteasy</groupId>
-            <artifactId>resteasy-client</artifactId>
-            <version>3.6.1.Final</version>
+            <groupId>dubbo.custom.base</groupId>
+            <artifactId>dubbo</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.jboss.resteasy/resteasy-client -->
+<!--        <dependency>-->
+<!--            <groupId>org.jboss.resteasy</groupId>-->
+<!--            <artifactId>resteasy-client</artifactId>-->
+<!--            <version>3.6.1.Final</version>-->
+<!--        </dependency>-->
 
     </dependencies>
 
