--- a/dubbo/dubbo-service/pom.xml
+++ b/dubbo/dubbo-service/pom.xml
@@ -34,6 +34,12 @@
             <artifactId>dubbo-api</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
+
+        <dependency>
+            <groupId>dubbo.custom.base</groupId>
+            <artifactId>dubbo</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
