PropertySourceLocator跟propertis里面配置属性一个样

--- a/activemq/src/main/resources/application.properties
+++ b/activemq/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 #spring.activemq.broker-url=
-spring.cloud.config.enabled=false
+#spring.cloud.config.enabled=false
+spring.activemq.broker-url=
+spring.rabbitmq.addresses=
