--- a/dubbo/dubbo-consumer/src/main/resources/application.properties
+++ b/dubbo/dubbo-consumer/src/main/resources/application.properties
@@ -3,4 +3,5 @@
 #dubbo.registry.address=zookeeper://119.3.10.221:2181
 #dubbo.metadata-report.address=zookeeper://119.3.10.221:2181
 #dubbo.consumer.timeout=10000
-#server.port=8093
+server.port=8078
+#debug=true
