--- a/course/src/main/resources/application-dev.properties
+++ b/course/src/main/resources/application-dev.properties
@@ -1,6 +1,6 @@
 # jdbc_config  datasource
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://119.3.10.221:3306/course?nullCatalogMeansCurrent=true
+spring.datasource.url=jdbc:mysql://localhost:3306/course?nullCatalogMeansCurrent=true
 spring.datasource.username=admin
 spring.datasource.password=Upc@CST2018
 # Hikari will use the above plus the following to setup connection pooling
