--- a/dubbo/dubbo-consumer/src/main/resources/application.properties
+++ b/dubbo/dubbo-consumer/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # dubbo-consumer.properties
 #dubbo.application.name=annotation-consumer
-#dubbo.registry.address=zookeeper://119.3.10.221:2181
-#dubbo.metadata-report.address=zookeeper://119.3.10.221:2181
+#dubbo.registry.address=zookeeper://localhost:2181
+#dubbo.metadata-report.address=zookeeper://localhost:2181
 #dubbo.consumer.timeout=10000
 server.port=8078
 #debug=true
