--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,7 @@
         <module>activemq</module>
         <module>shardingjdbc</module>
         <module>cloud</module>
+        <module>utils</module>
     </modules>
     <dependencyManagement>
 
