修改项目结构

--- a/activemq/pom.xml
+++ b/activemq/pom.xml
@@ -3,12 +3,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <artifactId>j4f</artifactId>
+        <artifactId>self-entertainment</artifactId>
         <groupId>com.self.entertainment</groupId>
         <version>${j4f.version}</version>
     </parent>
     <groupId>com.example</groupId>
-    <artifactId>demo</artifactId>
+    <artifactId>activemq</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>activemq</name>
     <description>Demo project for Spring Boot</description>
