--- a/amazingt/pom.xml
+++ b/amazingt/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <artifactId>j4f</artifactId>
+        <artifactId>self-entertainment</artifactId>
         <groupId>com.self.entertainment</groupId>
         <version>${j4f.version}</version>
     </parent>
