--- a/utils/pom.xml
+++ b/utils/pom.xml
@@ -2,15 +2,16 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <parent>
-        <artifactId>j4f</artifactId>
-        <groupId>com.self.entertainment</groupId>
-        <version>1.0.0-SNAPSHOT</version>
-    </parent>
     <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <artifactId>self-entertainment</artifactId>
+        <groupId>com.self.entertainment</groupId>
+        <version>${j4f.version}</version>
+    </parent>
 
+    <version>0.0.1-SNAPSHOT</version>
     <artifactId>utils</artifactId>
-
+    <packaging>jar</packaging>
     <dependencies>
         <dependency>
             <groupId>org.apache.commons</groupId>
