--- a/web/pom.xml
+++ b/web/pom.xml
@@ -3,12 +3,12 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>j4f</artifactId>
+        <artifactId>self-entertainment</artifactId>
         <groupId>com.self.entertainment</groupId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>${j4f.version}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
+    <version>0.0.1-SNAPSHOT</version>
     <artifactId>web</artifactId>
 
 
